<resources>
    <string name="app_name">MercadoLibro</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="logout_message">Sesión cerrada. ¡Hasta pronto!</string>
    <string name="app_footer_text">© Mercado Libro 2025</string>
    <string name="error_unknown">Error desconocido</string>
    <string name="feature_not_implemented">Funcionalidad no implementada aún.</string>
    <string name="label_username">Email</string>
    <string name="hint_username_input">Ingrese su email</string>
    <string name="label_password">Contraseña</string>
    <string name="hint_password_input">Ingrese su contraseña</string>
    <string name="label_name">Nombre</string>
    <string name="hint_name_input">Ingrese su nombre</string>
    <string name="button_login_text">Ingresar</string>
    <string name="button_register_text">Registrarse</string>
    <string name="button_back_text">Volver</string>
    <string name="button_politics_text">Políticas de Privacidad</string>
    <string name="error_invalid_credentials">Credenciales incorrectas</string>
    <string name="error_login_failed">Error al iniciar sesión. Intenta nuevamente.</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_password_required">La contraseña es requerida.</string>
    <string name="error_password_min_length">La contraseña debe tener al menos 6 caracteres.</string>
    <string name="error_name_required">El nombre de usuario es requerido.</string>
    <string name="error_registration_failed">No se pudo registrar. Intenta nuevamente.</string>
    <string name="error_registration_failed_toast">Error al registrar. Por favor, intenta nuevamente.</string>
    <string name="logo_content_description">Logo</string>
    <string name="label_repeat_password">Repetir Contraseña</string>
    <string name="hint_repeat_password_input">Vuelve a escribir tu contraseña</string>
    <string name="error_password_mismatch">Las contraseñas no coinciden.</string>
    <string name="error_username_length">El nombre debe tener entre 3 y 50 caracteres.</string>
    <string name="error_username_format">El nombre solo puede contener letras y espacios.</string>
    <string name="error_repeat_password_required">La confirmación de contraseña es requerida.</string>
    <string name="error_password_format">La contraseña debe contener al menos 1 mayúscula, 1 minúscula, 1 número y 1 carácter especial (@$!%*?&amp;_-).</string>
    <string name="error_email_required">El email es requerido.</string>
    <string name="error_password_length">La contraseña debe tener entre 8 y 16 caracteres.</string>
    <string name="welcome_message">¡Hola querido Lector!</string>
    <string name="email_placeholder">Dato desde el back</string>
    <string name="button_my_reviews">Mis Reseñas</string>
    <string name="my_reviews_title">Mis Reseñas</string>
    <string name="button_shipping_status">Estado de mi envío</string>
    <string name="button_edit_data">Editar mis datos</string>
    <string name="button_unsubscribe">Dar de Baja</string>
    <string name="personal_data_laws_info">De acuerdo con las leyes de protección de datos personales,\ntienes derecho a solicitar la eliminación de tu cuenta\ny de todos tus datos asociados en cualquier momento.</string>
    <string name="error_no_active_session_delete">No hay sesión activa para eliminar el usuario.</string>
    <string name="error_getting_user_data">Error al obtener datos del usuario.</string>
    <string name="error_network_connection_user_data">Fallo en la conexión para obtener usuario.</string>
    <string name="success_user_deleted">Usuario eliminado con éxito.</string>
    <string name="error_deleting_user">Error al eliminar el usuario.</string>
    <string name="error_network_connection_delete_user">Fallo en la conexión para eliminar usuario.</string>
    <string name="email_not_found">Email no encontrado</string>
    <string name="error_auth_required">Error de autenticación. Por favor, inicia sesión nuevamente.</string>
    <string name="error_auth_required_addresses">Se requiere autenticación para ver y gestionar direcciones.</string>
    <string name="error_auth_required_delete_address">Se requiere autenticación para eliminar la dirección.</string>
    <string name="hint_search_book">Busca tu próxima historia</string>
    <string name="book_title_placeholder">Título del Libro</string>
    <string name="book_price_placeholder">Precio: $100.00</string>
    <string name="book_author_placeholder">Autor:</string>
    <string name="book_category_placeholder">Categoría:</string>
    <string name="book_stock_placeholder">En stock:</string>
    <string name="button_buy">Comprar</string>
    <string name="button_synopsis">Sinopsis</string>
    <string name="button_view_reviews">Reseñas</string>
    <string name="content_description_book_cover">Portada del libro</string>
    <string name="error_respuesta">Error de respuesta: %s</string>
    <string name="error_cargar_libros">Error al cargar libros: %s</string>
    <string name="book_price_display">Precio: $%s</string>
    <string name="book_author_display">Autor: %s</string>
    <string name="book_category_display">Categoría: %s</string>
    <string name="book_stock_display">En stock: %d</string>
    <string name="error_not_authenticated_buy">Usuario no autenticado. Por favor, inicia sesión.</string>
    <string name="error_show_reviews_fragment">Error: No se puede mostrar el fragment de reseñas.</string>
    <string name="label_synopsis">Sinopsis:</string>
    <string name="book_synopsis_placeholder">El Diario de Ana Frank es el relato personal de una niña judía de 13 años que, junto con su familia y otras personas, se ocultó durante dos años en un anexo secreto de Ámsterdam para escapar de la persecución nazi durante la Segunda Guerra Mundial.</string>
    <string name="button_back">Volver</string>
    <string name="total_price_format">Total: $%s</string>
    <string name="title_finish_purchase">Finalizar compra</string>
    <string name="total_price_placeholder">Total: $0.00</string>
    <string name="button_continue">Continuar</string>
    <string name="error_token_not_found_cart">Token no encontrado. Por favor, inicia sesión nuevamente.</string>
    <string name="success_add_to_cart">Libro agregado al carrito</string>
    <string name="error_add_to_cart_code">Error al agregar al carrito. Código: %d</string>
    <string name="error_network_connection_cart">Fallo la conexión al agregar al carrito.</string>
    <string name="title_payment_method">Método de Pago</string>
    <string name="label_card_number">Número de Tarjeta:</string>
    <string name="hint_enter_card_number">Ingrese el número de tarjeta</string>
    <string name="label_cvv">CVV:</string>
    <string name="hint_enter_cvv">Ingrese el CVV</string>
    <string name="label_expiration">Vencimiento (MM/AA):</string>
    <string name="hint_enter_expiration">Ingrese la fecha de vencimiento</string>
    <string name="label_card_type">Tipo de Tarjeta:</string>
    <string name="label_my_data">MIS DATOS:</string>
    <string name="label_card_number_display_placeholder">Su número de tarjeta es:</string>
    <string name="label_cvv_display_placeholder">Su CVV es:</string>
    <string name="label_expiration_display_placeholder">Su fecha de vencimiento es:</string>
    <string name="info_payment_verification">Por favor, verifique que los datos sean correctos antes de continuar.</string>
    <string name="button_pay">Pagar</string>
    <string name="label_expiration_display">Vencimiento: %s</string>
    <string name="label_card_number_display">Número de Tarjeta: %s</string>
    <string name="label_cvv_display">CVV: %s</string>
    <string name="label_card_type_display_placeholder"></string>
    <string name="success_payment_made">Pago realizado con éxito</string>
    <string name="error_making_payment">Error al realizar el pago: %s</string>
    <string name="error_network_connection_payment">Error de conexión al realizar el pago.</string>
    <string name="error_invalid_token_or_user_id">Token o ID de usuario no válido. Por favor, inicie sesión.</string>
    <string name="label_card_type_display">Tipo de Tarjeta: %s</string>
    <string name="error_card_number_length">El número de tarjeta debe tener 16 dígitos.</string>
    <string name="error_cvv_length">El CVV debe tener 3 dígitos.</string>
    <string name="error_expiration_format">El vencimiento debe estar en formato MM/AA y no puede tener más de 5 caracteres.</string>
    <string name="error_month_range">El mes debe estar entre 01 y 12.</string>
    <string name="error_expiration_past">La fecha de vencimiento no puede ser en el pasado.</string>
    <string name="error_card_type_invalid">El tipo de tarjeta debe ser \'debito\' o \'credito\'.</string>
    <string name="my_addresses_title">Mis Direcciones</string>
    <string name="button_add_new_address">Agregar Nueva Dirección</string>
    <string name="no_addresses_saved">No tienes direcciones guardadas.</string>
    <string name="address_placeholder_format">%s %s, %s, %s</string>
    <string name="drawer_menu_profile">Perfil</string>
    <string name="drawer_menu_products">Productos</string>
    <string name="drawer_menu_contact">Contacto</string>
    <string name="drawer_menu_about_us">"¿Quiénes somos?"</string>
    <string name="drawer_menu_logout">Cerrar sesión</string>
    <string name="drawer_menu_my_reviews">Mis Reseñas</string>
    <string name="drawer_menu_my_addresses">Mis Direcciones</string>
    <string name="drawer_menu_my_orders">Mis Pedidos</string>
    <string name="drawer_menu_section_general">General</string>
    <string name="quienes_somos_titulo">¿Quiénes Somos?</string>
    <string name="desc_quienes_somos">Imagen de una estantería con libros</string>
    <string name="titulo_nuestra_historia">Nuestra historia</string>
    <string name="descripcion_nuestra_historia">
    MercadoLibro nació como una iniciativa para recuperar el valor de los libros físicos olvidados o almacenados sin uso.
    Lo que comenzó como un proyecto de estudiantes se convirtió en una plataforma que impulsa el acceso a la lectura
    a través del intercambio responsable, fortaleciendo una economía circular del conocimiento.</string>
    <string name="titulo_mision">Nuestra Misión</string>
    <string name="texto_mision">
    Promover el acceso a la lectura mediante la revalorización e intercambio de libros físicos, facilitando una alternativa sostenible, colaborativa y económica que conecte a lectores de todas las edades y contextos.
</string>
    <string name="desc_icono_mision">Imagen del ícono que representa la misión de la plataforma</string>
    <string name="titulo_vision">Nuestra Visión</string>
    <string name="texto_vision">
    Ser la plataforma líder en Latinoamérica para el intercambio responsable de libros físicos, fortaleciendo una comunidad lectora activa y generando impacto social, cultural y ambiental positivo a través de una economía circular del conocimiento.
</string>
    <string name="desc_icono_vision">Imagen del ícono que representa la visión de la plataforma</string>
    <string name="titulo_valores">Nuestros Valores</string>
    <string name="valor_1_titulo">✔ Revalorización del libro físico</string>
    <string name="valor_1_descripcion">Creemos en el valor cultural y afectivo de los libros impresos, dándoles una segunda vida útil.</string>
    <string name="valor_2_titulo">✔ Acceso equitativo a la lectura</string>
    <string name="valor_2_descripcion">Apostamos a facilitar el acceso al conocimiento sin depender del costo de los libros nuevos.</string>
    <string name="valor_3_titulo">✔ Comunidad colaborativa</string>
    <string name="valor_3_descripcion">Construimos redes solidarias entre lectores que comparten, intercambian y se apoyan mutuamente.</string>
</resources>