<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/drawer_menu_profile" />
        <item
            android:id="@+id/nav_my_reviews"
            android:icon="@drawable/ic_star"
            android:title="@string/drawer_menu_my_reviews" />
        <item
            android:id="@+id/nav_my_addresses"
            android:icon="@drawable/ic_location"
            android:title="@string/drawer_menu_my_addresses" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_cart"
            android:title="@string/drawer_menu_my_orders" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/separator_line"
                android:enabled="false"
                android:title="" />
        </menu>
    </item>

    <item
        android:textAppearance="@style/NavigationViewSectionHeader"
        android:title="@string/drawer_menu_section_general" >
        <menu>
            <item
                android:id="@+id/nav_products"
                android:icon="@drawable/ic_products"
                android:title="@string/drawer_menu_products" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/ic_menu_mapmode"
                android:title="Feedback" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/drawer_menu_contact" />
            <item
                android:id="@+id/nav_nosotros"
                android:icon="@drawable/baseline_people_24"
                android:title="@string/drawer_menu_about_us" />
        </menu>

    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/drawer_menu_logout" />

</menu>