<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    android:background="@drawable/fondo2"
    tools:context=".fragments.NosotrosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Título Principal -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quienes_somos_titulo"
            android:textSize="@dimen/text_size_xlarge"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_large" />

        <!-- Nuestra historia -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/card_background_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_large"
                android:background="@drawable/borde_card">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_height_history"
                    android:src="@drawable/nuestra_historia"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/desc_quienes_somos"
                    android:layout_marginBottom="@dimen/margin_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_nuestra_historia"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion_nuestra_historia"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_extra_small" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Misión y Visión -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/card_background_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_large"
                android:background="@drawable/borde_card">

                <!-- Misión -->
                <ImageView
                    android:layout_width="@dimen/icon_size_small"
                    android:layout_height="@dimen/icon_size_small"
                    android:src="@drawable/icono_mision"
                    android:contentDescription="@string/desc_icono_mision"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_mision"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_primary"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_extra_small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_mision"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:gravity="center_horizontal" />

                <!-- Visión -->
                <ImageView
                    android:layout_width="@dimen/icon_size_small"
                    android:layout_height="@dimen/icon_size_small"
                    android:src="@drawable/icono_vision"
                    android:contentDescription="@string/desc_icono_vision"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_vision"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_primary"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_extra_small" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_vision"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Valores con Banner y Título adentro -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:cardBackgroundColor="@color/card_background_color"
            android:layout_marginTop="@dimen/margin_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_large"
                android:background="@drawable/borde_card">

                <!-- Banner dentro de la Card -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/image_height_banner"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banner_nosotros"
                    android:contentDescription="@string/quienes_somos_titulo"
                    android:layout_marginBottom="@dimen/margin_medium" />

                <!-- Título dentro de la Card -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_valores"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:gravity="center_horizontal" />

                <!-- Valor 1 -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor_1_titulo"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_small" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor_1_descripcion"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_primary" />

                <!-- Valor 2 -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor_2_titulo"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_large" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor_2_descripcion"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_primary" />

                <!-- Valor 3 -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor_3_titulo"
                    android:textStyle="bold"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_large" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valor_3_descripcion"
                    android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_primary" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>
