<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".fragments.PagoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_large"> <TextView
        android:id="@+id/tvMetodoPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_payment_method" android:textSize="@dimen/text_size_xlarge" android:textColor="@color/text_primary" android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:cardElevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardBackgroundColor="@color/card_background_color"
            app:layout_constraintTop_toBottomOf="@id/tvMetodoPago"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_large"
                android:background="@drawable/borde_card">

                <TextView
                    android:id="@+id/tvNumeroTarjeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_card_number" android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_primary" />

                <EditText
                    android:id="@+id/etNumeroTarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/min_touch_target_size" android:hint="@string/hint_enter_card_number" android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_hint"
                    android:inputType="number"
                    android:background="@null"
                    android:paddingBottom="@dimen/padding_small" /> <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_medium"
                android:background="@color/line_separator_color" />

                <TextView
                    android:id="@+id/tvCVV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_cvv" android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_primary" />

                <EditText
                    android:id="@+id/etCVV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/min_touch_target_size" android:hint="@string/hint_enter_cvv" android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_hint"
                    android:inputType="number"
                    android:background="@null"
                    android:paddingBottom="@dimen/padding_small" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@color/line_separator_color" />

                <TextView
                    android:id="@+id/tvVencimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_expiration" android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_primary" />

                <EditText
                    android:id="@+id/etVencimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/min_touch_target_size" android:hint="@string/hint_enter_expiration" android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_hint"
                    android:inputType="text"
                    android:background="@null"
                    android:maxLength="5" android:paddingBottom="@dimen/padding_small" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@color/line_separator_color" />

                <TextView
                    android:id="@+id/tvTipoTarjeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_card_type" android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_primary" />

                <Spinner
                    android:id="@+id/spTipoTarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/min_touch_target_size" android:background="@drawable/spinner_background" android:overlapAnchor="false"
                    android:spinnerMode="dropdown" /> <TextView
                    android:id="@+id/misdatosr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_my_data" android:textStyle="bold"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_medium_plus" /> <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    app:cardElevation="@dimen/card_elevation_small"
                    app:cardCornerRadius="@dimen/card_corner_radius"
                    app:cardBackgroundColor="@color/card_background_color_light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_large"
                    android:background="@drawable/borde_card">

                    <TextView
                        android:id="@+id/tvNumeroTarjetaMostrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_card_number_display_placeholder" android:textSize="@dimen/text_size_small"
                        android:textColor="@color/text_primary"
                        android:layout_marginTop="@dimen/margin_small" />

                    <TextView
                        android:id="@+id/tvCVVMostrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_cvv_display_placeholder" android:textSize="@dimen/text_size_small"
                        android:textColor="@color/text_primary"
                        android:layout_marginTop="@dimen/margin_small" />

                    <TextView
                        android:id="@+id/tvVencimientoMostrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_expiration_display_placeholder" android:textSize="@dimen/text_size_small"
                        android:textColor="@color/text_primary"
                        android:layout_marginTop="@dimen/margin_small" />

                    <TextView
                        android:id="@+id/tvmostarTipoTarjeta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_card_type_display_placeholder" android:textSize="@dimen/text_size_small"
                        android:textColor="@color/text_primary"
                        android:layout_marginTop="@dimen/margin_small" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvInformacionPago"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_payment_verification" android:textSize="@dimen/text_size_small"
                    android:textColor="@color/text_primary"
                    android:layout_marginTop="@dimen/margin_large"
                    android:textAlignment="center" /> <Button
                android:id="@+id/btnPagar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_pay" android:textColor="@color/white"
                android:backgroundTint="@color/azul_electrico"
                android:layout_marginTop="@dimen/margin_top_button_large"
                android:textSize="@dimen/text_size_large" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
